--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 <!--            <artifactId>druid-spring-boot-starter</artifactId>-->
 <!--            <version>1.1.21</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!-- 分页插件 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
